# cpps

./: .gitignore  Cargo.toml  README.md  install.ps1
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs
src/commands/: add.rs  build.rs  doctor.rs  mod.rs  new.rs  run.rs  uninstall.rs
src/compiler/: cache.rs  detect.rs  invoke.rs  mod.rs
src/config/: mod.rs  model.rs
src/errors/: formatter.rs  mod.rs  parser.rs  suggestions.rs
src/output/: colors.rs  mod.rs  progress.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/template/: mod.rs
src/template/templates/basic/: cpps.toml  main.cpp
src/template/templates/boost-fs/: cpps.toml  main.cpp
src/template/templates/fmt/: cpps.toml  main.cpp
src/template/templates/lib/: cpps.toml
src/template/templates/lib/include/: project.h
src/template/templates/lib/src/: project.cpp
src/template/templates/raylib/: cpps.toml  main.cpp
src/template/templates/sdl/: cpps.toml  main.cpp
src/template/templates/test/: cpps.toml  main.cpp  test_main.cpp
wix/: License.rtf  main.wxs
